developer/src/kmc-package/test/fixtures/invalid/warn_doc_file_dangerous.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.3</Version>
  </Info>
  <Files>
    <File>
      <Name>khmer_angkor.kmx</Name>
      <Description>Keyboard Khmer Angkor</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
    <!-- warn_doc_file_dangerous -->
    <File>
      <Name>khmer_angkor.docx</Name>
      <Description>Documentation</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.docx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Khmer Angkor</Name>
      <ID>khmer_angkor</ID>
      <Version>1.3</Version>
      <Languages>
        <Language ID="KM">Khmer</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
